--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,3 +7,14 @@ body {
     background-size: 100% 100%;
     text-align: center;
   }
+
+  .article-title, .article-p {  padding: 20px;}
+
+form {  padding: 5px;}
+white_check_mark
+eyes
+raised_hands::skin-tone-4
+
+
+#filter-btn {  width: 100%;}
+
